--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,49 @@ html {
     font-size: 62.5%;
 }
 
+body {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+}
+
 section {
     display: flex;
     /*align-items: center;*/
-    justify-content:center;
+    justify-content: space-evenly;
 }
 
 .content {
     max-width: 50rem;
 }
 
-.section-one .about_me {
+.icon {
+    font-size: 50px;
+}
+
+.primary {
+    background-color: #E9E3DB;
+}
+
+.section-one h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 6rem;
+    font-weight: 700;
+    flex-wrap: nowrap;
+    line-height: 8.4rem;
+    font-style: italic;
+}
+
+h1 span {
+    font-style: normal;
+    font-weight: 400;
+}
+
+.wichtig {
+
+}
+
+.section-two .about_me {
     font-family: 'Roboto', sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
@@ -24,7 +56,7 @@ section {
     letter-spacing: .2rem;
 }
 
-.section-one h1 {
+.section-two h1 {
     font-family: 'Playfair Display', serif;
     font-size: 4.8rem;
     font-weight: 700;
@@ -38,8 +70,52 @@ h1 span {
     font-weight: 400;
 }
 
-.section-one p {
+.section-two p {
     font-family: "Open Sans", sans-serif;
     font-size: 1.6rem;
     line-height: 2.5rem;
+}
+
+
+.impressum {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    color: white;
+    background-color: #2F162B;
+}
+
+.city img {
+    width: 80%;
+    border-radius: 15px;
+    border: 1px ridge #2F162B;
+}
+
+.impressum__link {
+    color: inherit;
+}
+
+.language {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+.two-language .info {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 2.2rem;
+    letter-spacing: .2rem;
+    margin: 1rem 0;
+}
+
+.language .title {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    flex-wrap: nowrap;
+    line-height: 3rem;
+    letter-spacing: .2rem;
 }
