--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ section {
 
 .section-one h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: 700;
     flex-wrap: nowrap;
     line-height: 8.4rem;
@@ -58,7 +58,7 @@ h1 span {
 
 .section-two h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 4.8rem;
+    font-size: 3.6rem;
     font-weight: 700;
     line-height: 5.2rem;
     overflow-wrap: break-word;
@@ -122,4 +122,8 @@ h1 span {
 
 .person-impressum span {
     display: block;
+}
+
+.figcaption{
+    font-size: 3rem;
 }
